# subsample

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS  CMakeLists.txt  DISTANCE.sh  JOBS  README  README.md  SUBSAMPLE.sh  index.html  install.sh  makefile  script.sh  script2.sh
.install/: boost.sh  delegator.sh  parse.sh
cluster/: slurm.sh  submit
data/Example/: SubsampleConfig.h
data/PersistenceDiagrams/: DiagramPairSubsampleConfig.h
data/PersistenceDiagrams/Bottleneck/: SubsampleConfig.h
data/PersistenceDiagrams/Wasserstein1/: SubsampleConfig.h
data/PersistenceDiagrams/Wasserstein2/: SubsampleConfig.h
data/PersistenceTuples/: SubsampleConfig.h  json.h
doc/: index.raw
include/geometry/: MetricTree.h
include/persistence/: BottleneckApproximateDistance.h  BottleneckAuctionDistance.h  BottleneckDistance.h  PersistenceDiagram.h  WassersteinApproximateDistance.h  WassersteinDistance.h
include/persistence/AuctionDistances/ann/include/ANN/: ANN.h
include/persistence/AuctionDistances/ann/src/: ANN.cpp
include/persistence/AuctionDistances/bottleneck/: Makefile
include/persistence/AuctionDistances/bottleneck/src/: basic_defs.cpp  basic_defs.h  bottleneck.cpp  bound_match.cpp  bound_match.h  neighb_oracle.cpp  neighb_oracle.h
include/persistence/approximatedistances/: CMakeLists.txt
include/persistence/approximatedistances/geom_bottleneck/: CMakeLists.txt
include/persistence/approximatedistances/geom_bottleneck/ann/: Makefile  bin
include/persistence/approximatedistances/geom_bottleneck/ann/MS_Win32/: Ann.sln
include/persistence/approximatedistances/geom_bottleneck/ann/include/ANN/: ANN.h
include/persistence/approximatedistances/geom_bottleneck/ann/src/: ANN.cpp  CMakeLists.txt  kd_search.cpp  kd_split.h  kd_tree.cpp  kd_tree.h
include/persistence/approximatedistances/geom_bottleneck/bottleneck/: CMakeLists.txt  _CMakeLists.txt  makefile
include/persistence/approximatedistances/geom_bottleneck/bottleneck/src/: CMakeLists.txt  basic_defs.cpp  basic_defs.h  bottleneck.cpp  bound_match.cpp  bound_match.h  neighb_oracle.cpp
include/persistence/approximatedistances/geom_bottleneck/bottleneck/src/ann/: CMakeLists.txt
include/persistence/approximatedistances/geom_bottleneck/bottleneck/src/include/: basic_defs.h  bottleneck.h  bound_match.h  neighb_oracle.h
include/persistence/approximatedistances/geom_matching/: CMakeLists.txt
include/persistence/approximatedistances/geom_matching/wasserstein/: CMakeLists.txt
include/persistence/approximatedistances/geom_matching/wasserstein/include/: auction_runner.h
include/persistence/approximatedistances/geom_matching/wasserstein/src/: CMakeLists.txt  auction_oracle.cpp  basic_defs.cpp  wasserstein.cpp
include/persistence/approximatedistances/remove_me/: CMakeLists.txt  README
include/persistence/approximatedistances/remove_me/ann/: Make-config  bin
include/persistence/approximatedistances/remove_me/ann/include/ANN/: ANNx.h
include/persistence/approximatedistances/remove_me/ann/src/: kd_split.cpp  kd_tree.cpp
include/persistence/approximatedistances/remove_me/bottleneck/src/: CMakeLists.txt  basic_defs.h  bottleneck.cpp  neighb_oracle.h
include/subsample/: SubsampleConfig.h  SubsampleDistance.h  SubsampleProcess.h
source/: CMakeLists.txt  ComputeDistanceMatrix.cpp  ComputeDistances.cpp  ComputeSubsample.cpp  Subsample.cpp
tests/: ._data.9ynYHz  TestHarness.cpp  distance_1.0_1.0.txt  distance_1.0_inf.txt  distance_1.0_inf_eps_0.txt  distance_1.0_inf_eps_1.txt  distance_10.0_inf_eps_0.txt  distance_10.0_inf_eps_1.txt  distance_100.0_1.0.txt  sample.json  subsample_1.0_1.0.json  subsample_1.0_inf.json  subsample_10.0_inf.json  subsample_100.0_1.0.json  tests.sh  trial.sh
tests/data/: sample.json
tests/data/DownUp/: Out_0_0.txt  Out_0_betti.txt  Out_10_0.txt  Out_10_betti.txt  Out_11_0.txt  Out_11_betti.txt  Out_12_0.txt  Out_12_betti.txt  Out_13_0.txt  Out_13_betti.txt  Out_14_0.txt  Out_14_betti.txt  Out_15_0.txt  Out_15_betti.txt  Out_16_0.txt  Out_16_betti.txt  Out_17_0.txt  Out_17_betti.txt  Out_18_0.txt  Out_18_betti.txt  Out_19_0.txt  Out_19_betti.txt  Out_1_0.txt  Out_1_betti.txt  Out_20_0.txt  Out_20_betti.txt  Out_21_0.txt  Out_21_betti.txt  Out_22_0.txt  Out_22_betti.txt  Out_23_0.txt  Out_23_betti.txt  Out_24_0.txt  Out_24_betti.txt  Out_25_0.txt  Out_25_betti.txt  Out_26_0.txt  Out_26_betti.txt  Out_27_0.txt  Out_27_betti.txt  (+150 more)
tests/data/UpDown/: Out_0_0.txt  Out_0_1.txt  Out_0_betti.txt  Out_10_0.txt  Out_10_1.txt  Out_10_betti.txt  Out_11_0.txt  Out_11_1.txt  Out_11_betti.txt  Out_12_0.txt  Out_12_1.txt  Out_12_betti.txt  Out_13_0.txt  Out_13_1.txt  Out_13_betti.txt  Out_14_0.txt  Out_14_1.txt  Out_14_betti.txt  Out_15_0.txt  Out_15_1.txt  Out_15_betti.txt  Out_16_0.txt  Out_16_1.txt  Out_16_betti.txt  Out_17_0.txt  Out_17_1.txt  Out_17_betti.txt  Out_18_1.txt  Out_18_betti.txt  Out_19_1.txt  Out_19_betti.txt  Out_1_0.txt  Out_1_1.txt  Out_1_betti.txt  Out_20_1.txt  Out_20_betti.txt  Out_21_0.txt  Out_21_1.txt  Out_21_betti.txt  Out_22_0.txt  (+244 more)
